--- a/Numpy.html
+++ b/Numpy.html
@@ -21,7 +21,7 @@
   </style>
 <body>
   <h1>Mengenal Apa itu Numpy di python dan Fungsinya?</h1>
-  <img src="Python.png" />
+  <img src="Python.png">
   <p>python adalah salah satu bahasa pemrograman yang cukup populer dan cocok untuk pemula.bahasa ini bisa untuk pengembangan perangkat lunak analisis data,dll.</p>
   <h4>APA ITU NUMPY?</h4>
   <P>Numpy adalah salah satu library python yang digunakan untuk analisis data numerik.data numerik adalah data yang berupa angka.</P>
