--- a/Portofolio sederhana.html
+++ b/Portofolio sederhana.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div id="img">
-    <img src="n.png">
+    <img src="https://ramadani2009.github.io/PublikDani/Python.png">
   </div>
   <hr size="20px" color="black">
   <hr size="5px" color="black">
