--- a/Numpy.html
+++ b/Numpy.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3798229482565932"
      crossorigin="anonymous"></script>
+  <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+  </script>
   <title>Numpy di python</title>
   <style>
     .Besar {
@@ -59,5 +63,8 @@
     <li>dll.</li>
   </ol>
   </p>
+  <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-3798229482565932">
+</amp-auto-ads>
 </body>
 </html>
