--- a/Numpy.html
+++ b/Numpy.html
@@ -62,6 +62,17 @@
     <li>untuk analisis data Numerik(data angka)</li><br>
     <li>dll.</li>
   </ol>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3798229482565932"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-3798229482565932"
+     data-ad-slot="7584925713"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   </p>
   <amp-auto-ads type="adsense"
         data-ad-client="ca-pub-3798229482565932">
