--- a/Numpy.html
+++ b/Numpy.html
@@ -10,6 +10,8 @@
   <script async custom-element="amp-auto-ads"
         src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3798229482565932"
+     crossorigin="anonymous"></script>
   <title>Numpy di python</title>
   <style>
     .Besar {
