Update Home.html for Mobile Legends landing page

--- a/LP/Home.html
+++ b/LP/Home.html
@@ -1,16 +1,17 @@
 <html>
 <head>
-<title></title>
+	<title>Mobile Legends Bang Bang Landng Page</title>
+	<link rel="stylesheet" href="Home.css">
 </head>
 <body>
 <nav>
-	<a href=".html"></a>
-	<a href=".html"></a>
-	<a href=".html"></a>
+	<a href="#induk">Home</a>
+	<a href=".html">ISI</a>
+	<a href=".html">End</a>
 </nav>
 <div id="induk">
 	<div id="anak1induk">
-		<img src="OIP.jpg" alt="Mobile Legends Bang Bang">
+		<img src="OIP.jpg" alt="Mobile Legends Bang Bang" width="100vw" height="auto">
 	</div>
 	<div id="anak2induk">
 		<h1>Mobile Legends Bang Bang</h1>
